# LinoSPAD2

./: .buildinfo  .gitignore  .pre-commit-config.yaml  FigureObject.fig.pickle  LICENSE  LinoSPAD2.functions.calc_diff.html  LinoSPAD2.functions.calibrate.html  LinoSPAD2.functions.cross_talk.html  LinoSPAD2.functions.delta_t.html  LinoSPAD2.functions.fits.html  LinoSPAD2.functions.plot_tmsp.html  LinoSPAD2.functions.unpack.html  LinoSPAD2.html  README.md  acknowledgement.html  batch_test.py  contribute.html  cross_talk_data.py  cross_talk_rate.py  cross_talk_rate_bin.py  differences.py  examples.html  functions.calc_diff.html  functions.calibrate.html  functions.cross_talk.html  functions.delta_t.html  functions.fits.html  functions.html  functions.plot_tmsp.html  functions.unpack.html  genindex.html  index.html  installation.html  intro.html  isolated_testing.py  license.html  main.py  manual_mp_benchmarking.py  modules.html  mp_benchmarking.py  (+18 more)
.doctrees/: LinoSPAD2.doctree  LinoSPAD2.functions.calc_diff.doctree  LinoSPAD2.functions.calibrate.doctree  LinoSPAD2.functions.cross_talk.doctree  LinoSPAD2.functions.delta_t.doctree  LinoSPAD2.functions.fits.doctree  LinoSPAD2.functions.plot_tmsp.doctree  LinoSPAD2.functions.unpack.doctree  acknowledgement.doctree  contribute.doctree  environment.pickle  examples.doctree  functions.calc_diff.doctree  functions.calibrate.doctree  functions.cross_talk.doctree  functions.delta_t.doctree  functions.doctree  functions.fits.doctree  functions.plot_tmsp.doctree  functions.unpack.doctree  index.doctree  installation.doctree  (+3 more)
(+323 files in other folders)
