[metadata]
name = LinoSPAD2
version = 0.9.0
description = LinoSPAD2 timestamp output analysis
author = Sergei Kulkov
author_email = sergei.kulkov23@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = LinoSPAD2
install-requires =
    lmfit>=1.2.2
    matplotlib>=3.7.2
    numpy>=1.24.4
    pandas>=2.0.3
    scipy>=1.11.1
    seaborn>=0.11.2
    tqdm>=4.66.1

python_requires = >=3.6
package_dir =
    = src
zip_safe = no

[options.packages.find]
where = src
