[metadata]
name = LinoSPAD2
version = 0.9.0
description = LinoSPAD2 timestamp output analysis
author = Sergei Kulkov
author_email = sergei.kulkov23@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    LinoSPAD2
install_requires =
    lmfit>=0.9.0
    matplotlib>=3.5.0
    numpy>=1.22.4
    pandas>=1.4.0
    scipy>=1.7.0
    seaborn>=0.9.0
    tqdm>=4.5.0

python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.packages.find]
where = src
